# OpenAHRS

./: .cproject  .gitignore  .mxproject  .project  AHRS.ioc  CMakeLists.txt  OpenAHRSBB Debug.launch  OpenAHRSBB.ioc  README.md  receive.ino  transmit.ino  unpack.py
.github/workflows/: main.yml
App/: CMakeLists.txt  ahrs.c  ahrs.h  app.c  app.h  icm45686.c  icm45686.h  spi_types.h  tlm.h
App/drivers/: ds3231.c  ds3231.h  icm45686.c  lis2mdl.c  lis2mdl.h
App/nav/: ahrs.c  ahrs.h
App/sensors/: imu.c  imu.h  mag.c  mag.h  sensor_types.h
App/tlm/: tlm.c  tlm.h
Core/Inc/: ICM45686.h  LIS2MDL.h  SensorFusion.h  main.h  spi_bus.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: ICM45686.c  LIS2MDL.c  SensorFusion.c  main.c  spi_bus.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Debug/: OpenAHRSBB.elf  OpenAHRSBB.list  OpenAHRSBB.map  makefile  objects.list
Debug/Core/Src/: ICM45686.cyclo  ICM45686.d  ICM45686.su  LIS2MDL.cyclo  LIS2MDL.d  LIS2MDL.su  SensorFusion.d  main.cyclo  main.d  main.su  spi_bus.cyclo  spi_bus.d  spi_bus.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.d
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_crc.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_pcd.d  (+8 more)
USB_DEVICE/App/: usbd_cdc_if.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
